* 20191220 Docs: Fix incorrect example used in --attach-body definition.
* 20191221 Docs: merge OpossumPetya's web page changes, use better web
           practices and make mobile friendly
* 20200118 Docs: misc web page changes. tweak pre font size to prevent
           scrolling, remove stray quotes, remove the news section from index
           add announcement to versions, link to both plaintext and
           rendered docs, etc
* 20200425 Fix strange issue where GMT offset could oscillate on days of DST
           transition.  Time::Local is no longer used and POSIX is now
           required (#17, deb bug 955798)
* 20200801 Update copyright year to 2020
* 20200801 Fix bug which broke XCLIENT and STARTTLS used together (#21)
* 20201004 Update README.md to reflect changes from
           234db829dc6e6d45fe4da5f2bef075828ebc0ac7 (#22). Move to reference-
           style markdown links to make it easier to identify links that
           need to be changed for a release.
* 20201004 Fix wording and example around html body on faq.html (#14)
* 20201004 Add '@' in attach examples to prevent deprecation warnings
* 20201004 Convert installation.pod to installation.html, link to it from
           index.html and README.md, and flesh it out. (#7)
* 20201010 Package App::swaks-20190914.0 for CPAN distribution (#23)
> 20201010 released 20201010.0
* 20201011 Fix test scripts to munge copyright date
* 20201012 Fix date string - should always be in English, not localized
           (introduced in 434f494abcc3558c73efc0e57a4338adeb402253)
* 20201013 But actually fix the date string this time. Also fix #25
* 20201014 Fix --protect-prompt. Not implemented correctly after option
           processing overhaul in a46b929 #26
* 20201014 Add newline echo after entering password with --protect-prompt
> 20201014 released 20201014.0
* 20201016 Document and improve automated testing to make it easier for
           new users to run in new environments