@@ -929,5 +929,6 @@
            processing overhaul in a46b929 #26
 * 20201014 Add newline echo after entering password with --protect-prompt
 > 20201014 released 20201014.0
-* 20201016 Document and improve automated testing to make it easier for
-           new users to run in new environments
+* 20201016 Testing: Document and improve automated testing to make it easier
+           for new users to run in new environments
+* 20201018 Testing: Add --winnow to run-all.pl
